k8s/base/network-policies/ai/allow-vector-db-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ollama-vector-db-egress
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ai-ollama
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ai
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ai-vector-db
      ports:
        - protocol: TCP
          port: 5432
